chore: fix button alignment issues (#1678)

--- a/web-components/src/components/button/scss/button.scss
+++ b/web-components/src/components/button/scss/button.scss
@@ -110,8 +110,7 @@
         $height: rem-calc(28),
         $padding: $button__padding--28,
         $radius: $button__radius--28,
-        $font-size: $button__font-size--28,
-        $line-height: $button__line-height--28
+        $font-size: $button__font-size--28
       );
     }
 
@@ -120,8 +119,7 @@
         $height: rem-calc(32),
         $padding: $button__padding--32,
         $radius: $button__radius--32,
-        $font-size: $button__font-size--32,
-        $line-height: $button__line-height--32
+        $font-size: $button__font-size--32
       );
     }
 
@@ -132,8 +130,7 @@
     &--40 {
       @include button-size(
         $height: rem-calc(40),
-        $padding: $button__padding--40,
-        $line-height: $button__line-height--40,
+        $padding: $button__padding--40,        
         $radius: $button__radius--40
       );
       
